@@ -318,6 +318,14 @@ var load_logging_viewer = function()
         {
           var doc = docs[i];
 
+          if( 1 === doc.time.length )
+          {
+            for( var key in doc )
+            {
+              doc[key] = doc[key][0];
+            }
+          }
+
           if( !doc.trace )
           {
             var lines = doc.message.split( "\n" );
